--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -682,43 +682,77 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-t5lEarWLCE {
-  display: flex;
-  background-image: url("../../../assets/images/download-300x168.jpg");
+.cid-t5mi8aspS3 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffe885;
 }
-.cid-t5lEarWLCE .mbr-overlay {
-  background-color: #353535;
-  opacity: 0.5;
+.cid-t5mi8aspS3 .mbr-fallback-image.disabled {
+  display: none;
 }
-.cid-t5lEarWLCE .content-wrap {
-  padding: 5rem 1rem;
-}
-@media (min-width: 768px) {
-  .cid-t5lEarWLCE {
-    align-items: center;
-  }
-  .cid-t5lEarWLCE .row {
-    justify-content: flex-start;
-  }
-  .cid-t5lEarWLCE .content-wrap {
-    width: 100%;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-t5lEarWLCE .content-wrap {
-    min-width: 50%;
-  }
+.cid-t5mi8aspS3 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
 @media (max-width: 767px) {
-  .cid-t5lEarWLCE {
-    -webkit-align-items: center;
-    align-items: center;
+  .cid-t5mi8aspS3 .row {
+    flex-direction: column-reverse;
   }
-  .cid-t5lEarWLCE .mbr-row {
-    -webkit-justify-content: center;
-    justify-content: center;
+  .cid-t5mi8aspS3 .mbr-figure {
+    margin-bottom: 1.5rem;
   }
-  .cid-t5lEarWLCE .content-wrap {
-    width: 100%;
+}
+.cid-t5mi8aspS3 .row {
+  align-items: center;
+}
+@media (min-width: 992px) {
+  .cid-t5mi8aspS3 .text-wrapper {
+    padding: 0 2rem;
   }
+}
+.cid-t5mi8aspS3 .media-content,
+.cid-t5mi8aspS3 .mbr-figure {
+  align-self: center;
+}
+.cid-t5mi8aspS3 .mbr-figure iframe {
+  width: 100%;
+}
+.cid-t5miMC2iIC {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #fafafa;
+}
+.cid-t5miMC2iIC .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-t5miMC2iIC .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-t5miMC2iIC .mbr-iconfont {
+  display: block;
+  font-size: 4rem;
+  color: #6592e6;
+  margin-bottom: 2rem;
+}
+.cid-t5miMC2iIC .card-wrapper {
+  min-height: 220px;
+  transition: all 0.3s;
+  border-radius: 4px;
+  padding: 1rem;
+  background: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
 }
